syntax = "proto3";

package grpc;

service auth {
    rpc GetToken (TokenRequest) returns (TokenResponse) {}
    rpc ValidateToken (ValidateRequest) returns (ValidateResponse) {}
}

message TokenRequest {
    int32 user = 1;
}

message TokenResponse {
    string token = 1;
}

message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    bool status = 1;
}
